Update basyx.aasservice/basyx.aasservice-backend-inmemory/src/main/java/org/eclipse/digitaltwin/basyx/aasservice/backend/InMemoryAasBackend.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>